<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_work_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_chat_bubble_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_how_many"
            android:icon="@drawable/ic_baseline_chat_bubble_24"
            android:title="@string/how_many" />
    </group>
</menu>