<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.addnotes.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.addnotes.ui.notes.NotesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_courses"
        android:name="com.example.addnotes.ui.courses.CoursesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_courses" />
</navigation>